--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>"HELLO WORLD" </h1>
+	<H1>"HELLO WORLD" </H1>
 </body>
 
 </html>
