--- a/main.html
+++ b/main.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-
+<text><h1>"Hello World"</h1></text>
 <head>
 </head>
 
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<H1>"HELLO WORLD" </H1>
 </body>
 
 </html>
